Another small fix

--- a/content/gmi.html
+++ b/content/gmi.html
@@ -28,6 +28,5 @@ handling schemes can be combined orthogonally, allowing us to express a
 large spectrum of communication mechanisms of which RMI and MPI-style
 collective communication are special cases. With GMI, the invocation and
 reply schemes can be selected for each method individually at run time.
-GMI is described
-<a href= "http://projects.gforge.cs.vu.nl/ibis/publications/maassen_lcr_02.pdf">here</a>.
+GMI is described <a href="publications.html#gmi">here</a>.
 </p>
