--- a/sat4satin.html
+++ b/sat4satin.html
@@ -18,7 +18,7 @@
 <body>
 <!-- Table for Main Body -->
 
-<table summary="main table" width="1000px" cellpadding=0 cellspacing="0" border=0 frame=void>
+<table summary="main table" width="1000px" cellpadding=0 cellspacing="0" border=0 frame=void align=center>
 <tr>
 
 <td align="center">
@@ -38,7 +38,7 @@
 
 </table>
 
-<table summary="main table" width="1000px" cellpadding=10>
+<table summary="main table" width="1000px" cellpadding=10 align=center>
 
 <tr>
 
@@ -77,6 +77,7 @@ include ("content/news.html");
 
 </div>
 
+<!--
 <p>
 <a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-html401" alt="Valid HTML 4.01 Strict" height="31" width="88"></a>
 </p>
@@ -88,6 +89,8 @@ src="http://jigsaw.w3.org/css-validator/images/vcss"
 alt="Valid CSS!">
 </a>
 </p>
+
+-->
 
 </td>
 
