center factory image

--- a/content/index.html
+++ b/content/index.html
@@ -14,7 +14,7 @@ project members explaining this in detail.</p>
 <p>Download a demo video, showing a galaxy simulation written with Satin (one of the Ibis programming models) and deployed with the JavaGAT <a href="downloads/barnes-demo-xvid.avi">here</a>.</p>
 
 <p>
-	<img src="images/ibis-factory.png" alt="ibis-factory" >
+	<img src="images/ibis-factory.png" alt="ibis-factory" align=center >
 </p>
 
 
