--- a/content/projects.html
+++ b/content/projects.html
@@ -25,6 +25,17 @@ see the <a href="http://www.few.vu.nl/onderwijs/masters/cs/masterprojects.html">
 </p>
 
 <p>
+As prerequisite for our projects, you should have knowledge from one
+or two of the following courses:
+<ul>
+<li><a href="http://www.cs.vu.nl/~bal/college04.html">Parallel Programming</a></li>
+<li><a href="http://www.cs.vu.nl/cs/os-cn/networks-2004.html">Computer Networks</a></li>
+<li><a href="http://www.cs.vu.nl/~graphics/">Computer Graphics</a></li>
+<li><a href="http://www.cs.vu.nl/obp/education/perfeval/">Performance Analysis of Communication Networks</a></li>
+<li><a href="http://www.cs.vu.nl/~kielmann/cgc/">Cluster and Grid Computing</a></li>
+</ul>
+</p>
+<p>
 As our work is mostly practically oriented, your programming skills should 
 at least be reasonable.
 </p>
@@ -33,7 +44,8 @@ at least be reasonable.
 
 <p>
 The following open topics are grouped by projects or topic area.
-The following descriptions merely indicate topics; the exact definition
+The following, individual descriptions merely indicate topics; 
+the exact definition
 of a Master project will be negotiated with the individual student,
 to match interests and also the size of 36 ECTS credit points per project.
 For other types of projects (like an Individual Programming Assignment
@@ -45,7 +57,7 @@ unless stated otherwise with a particular topic.
 </p>
 
 <p>
-Here are shortcuts to general themes of topics:
+Here are shortcuts to general topics areas:
 </p>
 <ul>
 <li><a href="#m-ibis">Ibis</a>
@@ -65,17 +77,6 @@ and the Zorilla peer-to-peer grid middleware.  All components can be
 deployed on any grid platform, due to the use of Java.
 </p>
 
-<p>
-As prerequisite for Ibis projects, you should have knowledge from one
-or two of the following courses:
-<ul>
-<li><a href="http://www.cs.vu.nl/~bal/college04.html">Parallel Programming</a></li>
-<li><a href="http://www.cs.vu.nl/cs/os-cn/networks-2004.html">Computer Networks</a></li>
-<li><a href="http://www.cs.vu.nl/~graphics/">Computer Graphics</a></li>
-<li><a href="http://www.cs.vu.nl/obp/education/perfeval/">Performance Analysis of Communication Networks</a></li>
-<li><a href="http://www.cs.vu.nl/~kielmann/cgc/">Cluster and Grid Computing</a></li>
-</ul>
-</p>
 
 <ul>
 <li><b>IPL over UDP</b></li>
