--- a/content/projects.html
+++ b/content/projects.html
@@ -157,6 +157,11 @@ different solution strategy may be necessary.
 <h3><a name="m-saga">SAGA (and JavaGAT)</a></h3>
 <h3><a name="m-graphics">Graphics</a></h3>
 
+Occasionally, there are subjects available related to computer graphics,
+also in combination with Amsterdam-based companies. If you are interested,
+please contact 
+<a href="http://www.cs.vu.nl/~kielmann/">Thilo Kielmann</a>.
+
 <h3><a name="m-misc">Miscellaneous</a></h3>
 
 <ul>
