saga stuff added

--- a/content/projects.html
+++ b/content/projects.html
@@ -155,6 +155,37 @@ different solution strategy may be necessary.
 </ul>
 
 <h3><a name="m-saga">SAGA (and JavaGAT)</a></h3>
+<p>
+<a href="http://saga.cct.lsu.edu/">SAGA</a> is the Simple API for Grid 
+Applications, a standard we have developed within the Open Grid Forum
+<a href="http://www.ogf.org"><OGF)</a>. SAGA is supposed to be a successor,
+more focused to application needs, of the Grid Application Toolkit (GAT).
+</p>
+<p>
+Our group has built a SAGA implementation in the Java language, using the
+JavaGAT as an underlying interface to middleware.
+In the context of the SAGA/JavaGAT combination, we have a few topics available.
+</p>
+
+<ul>
+<li><b>Adaptors for OGF's OGSA-based services</b></li>
+<p>
+Recently, implementation of the OGSA BES (basic execution service) and
+BYTE-IO have become available. Coupling them with SAGA (via the JavaGAT)
+would provide an important evaluation of OGF standards.
+</p>
+Please contact <a href="http://www.cs.vu.nl/~kielmann/">Thilo Kielmann</a>.
+
+<li><b>Adaptors for Condor</b></li>
+<p>
+<a href="www.cs.wisc.edu/condor/">Condor</a> is a widely used middleware 
+to submit computational jobs to, focusing on high-throughput computing.
+Coupling Condor with SAGA (via the JavaGAT)
+would provide an important extension of the SAGA/JavaGAT scope.
+</p>
+Please contact <a href="http://www.cs.vu.nl/~kielmann/">Thilo Kielmann</a>.
+</ul>
+
 <h3><a name="m-graphics">Graphics</a></h3>
 
 Occasionally, there are subjects available related to computer graphics,
