--- a/content/projects.html
+++ b/content/projects.html
@@ -174,7 +174,8 @@ Recently, implementation of the OGSA BES (basic execution service) and
 BYTE-IO have become available. Coupling them with SAGA (via the JavaGAT)
 would provide an important evaluation of OGF standards.
 </p>
-Please contact <a href="http://www.cs.vu.nl/~kielmann/">Thilo Kielmann</a>.
+<p>Please contact
+<a href="http://www.cs.vu.nl/~kielmann/">Thilo Kielmann</a>.</p>
 
 <li><b>Adaptors for Condor</b></li>
 <p>
@@ -183,7 +184,8 @@ to submit computational jobs to, focusing on high-throughput computing.
 Coupling Condor with SAGA (via the JavaGAT)
 would provide an important extension of the SAGA/JavaGAT scope.
 </p>
-Please contact <a href="http://www.cs.vu.nl/~kielmann/">Thilo Kielmann</a>.
+<p>Please contact 
+<a href="http://www.cs.vu.nl/~kielmann/">Thilo Kielmann</a>.</p>
 </ul>
 
 <h3><a name="m-graphics">Graphics</a></h3>
