--- a/content/projects.html
+++ b/content/projects.html
@@ -179,8 +179,9 @@ would provide an important evaluation of OGF standards.
 
 <li><b>Adaptors for Condor</b></li>
 <p>
-<a href="www.cs.wisc.edu/condor/">Condor</a> is a widely used middleware 
-to submit computational jobs to, focusing on high-throughput computing.
+<a href="http://www.cs.wisc.edu/condor/">Condor</a> is a widely used 
+middleware to submit computational jobs to, focusing on high-throughput 
+computing.
 Coupling Condor with SAGA (via the JavaGAT)
 would provide an important extension of the SAGA/JavaGAT scope.
 </p>
