refined OGSA adaptors topic

--- a/content/projects.html
+++ b/content/projects.html
@@ -170,8 +170,10 @@ In the context of the SAGA/JavaGAT combination, we have a few topics available.
 <ul>
 <li><b>Adaptors for OGF's OGSA-based services</b></li>
 <p>
-Recently, implementation of the OGSA BES (basic execution service) and
-BYTE-IO have become available. Coupling them with SAGA (via the JavaGAT)
+Recently, implementations of the OGSA BES (basic execution service) and
+BYTE-IO have become available, such as 
+<a href="http://www.cs.virginia.edu/~vcgr/wiki/index.php/The_Genesis_II_Project">Genesis II</a> form the university of Virginia.
+Coupling Genesis II with SAGA (via the JavaGAT)
 would provide an important evaluation of OGF standards.
 </p>
 <p>Please contact
