--- a/content/projects.html
+++ b/content/projects.html
@@ -172,7 +172,7 @@ In the context of the SAGA/JavaGAT combination, we have a few topics available.
 <p>
 Recently, implementations of the OGSA BES (basic execution service) and
 BYTE-IO have become available, such as 
-<a href="http://www.cs.virginia.edu/~vcgr/wiki/index.php/The_Genesis_II_Project">Genesis II</a> form the university of Virginia.
+<a href="http://www.cs.virginia.edu/~vcgr/wiki/index.php/The_Genesis_II_Project">Genesis II</a> form the University of Virginia.
 Coupling Genesis II with SAGA (via the JavaGAT)
 would provide an important evaluation of OGF standards.
 </p>
