--- a/content/javagat.html
+++ b/content/javagat.html
@@ -20,7 +20,7 @@ coordinated, generic and flexible APIs for accessing grid services
 from application codes, portals, data managements systems, etc.</p>
 
 <p>JavaGAT sits between grid applications and numerous types of
-grid middleware, such as Globus, Unicore, SSH or Zorilla. JavaGAT
+grid middleware, such as Globus, SGE, SSH or Zorilla. JavaGAT
 lifts the burden of grid application programmers by providing them
 with a uniform interface that provides file access, job submission,
 monitoring, and access to information services. As a result, grid
