--- a/content/projects.html
+++ b/content/projects.html
@@ -158,8 +158,9 @@ different solution strategy may be necessary.
 <p>
 <a href="http://saga.cct.lsu.edu/">SAGA</a> is the Simple API for Grid 
 Applications, a standard we have developed within the Open Grid Forum
-<a href="http://www.ogf.org"><OGF)</a>. SAGA is supposed to be a successor,
-more focused to application needs, of the Grid Application Toolkit (GAT).
+<a href="http://www.ogf.org">(OGF)</a>. SAGA is supposed to be a successor
+of the Grid Application Toolkit (GAT) that is
+more focused to application needs.
 </p>
 <p>
 Our group has built a SAGA implementation in the Java language, using the
@@ -168,6 +169,19 @@ In the context of the SAGA/JavaGAT combination, we have a few topics available.
 </p>
 
 <ul>
+<li><b>One SAGA for all</b></li>
+<p>
+So far, there exist two SAGA implementations, one in the Java language,
+and one in C++. Ideally, programs written in any programming language should
+be able to use SAGA's functionality. To come close to this goal, we propose
+to use the SAGA implementation in C++ and to turn it into a server process 
+that accepts calls from localhost using
+<a href="http://www.xmlrpc.com">XML-RPC</a> for which client implementations
+exist for many, many languages.
+</p>
+<p>Please contact
+<a href="http://www.cs.vu.nl/~kielmann/">Thilo Kielmann</a>.</p>
+
 <li><b>Adaptors for OGF's OGSA-based services</b></li>
 <p>
 Recently, implementations of the OGSA BES (basic execution service) and
