--- a/content/projects.html
+++ b/content/projects.html
@@ -340,6 +340,28 @@ an Individual Programming Assignment for PDCS students.
 
 
 <ul>
+<li><b>Shared memory for grid applications (C++ && C)</b></li>
+
+The Simple API for Grid Applications (SAGA) is an open standard that
+defines a high-level, object-oriented interface to grid functionality
+(e.g. job submission, file access etc.) SAGA is used in the XtreemOS
+project, which aims to develop a linux-based operating system
+specifically designed for grids. A subproject within XtreemOS is the
+Object Sharing Service (OSS), a C-library that provides shared memory
+with various consistency models to distributed applications.
+
+In this IPA, you will add the functionality of OSS to the C++ reference
+implementation of SAGA. The end goal is to have an object-oriented
+interface to distributed shared memory, which will be added to the
+XtreemOS distribution.
+
+More information:
+<ul>
+<li><a href="http://en.wikipedia.org/wiki/SAGA">SAGA</a>
+<li><a href="http://saga.cct.lsu.edu/">SAGA home page</a>
+<li><a href="http://www.xtreemos.eu/">XtreemOS</a>
+</ul>
+
 <li><b>JavaGAT SRB adaptor</b></li>
 
 The JavaGAT is currently somewhat low on storage adaptors. An adaptor
