added another IPA

--- a/content/projects.html
+++ b/content/projects.html
@@ -362,6 +362,28 @@ More information:
 <li><a href="http://www.xtreemos.eu/">XtreemOS</a>
 </ul>
 
+<li><b>Job submission in XtreemOS (Java)</b></li>
+
+The Simple API for Grid Applications (SAGA) is an open standard that
+defines a high-level, object-oriented interface to grid functionality
+(e.g. job submission, file access etc.). SAGA interacts with different
+kinds of middleware using plugins called 'adaptors'. SAGA is used in the
+XtreemOS project, which aims to develop a linux-based operating system
+specifically designed for grids. Among other things, XtreemOS provides
+its own job submission system.
+
+In this IPA, you will implement a job adaptor for the Java
+implementation of SAGA that interacts with the job submission system of
+XtreemOS. The end goal is to be able to submit jobs to XtreemOS nodes
+from a Java application using SAGA.
+
+More information:
+<ul>
+<li><a href="http://en.wikipedia.org/wiki/SAGA">SAGA</a>
+<li><a href="http://saga.cct.lsu.edu/">SAGA home page</a>
+<li><a href="http://www.xtreemos.eu/">XtreemOS</a>
+</ul>
+
 <li><b>JavaGAT SRB adaptor</b></li>
 
 The JavaGAT is currently somewhat low on storage adaptors. An adaptor
