added a literature study

--- a/content/projects.html
+++ b/content/projects.html
@@ -323,10 +323,20 @@ information.
 <p>
 Within the Computer Systems section, literature studies and their examination
 are organized by 
-<a href="http://www.few.vu.nl/%7Ekmitrok/literature_study2008.html">
-Katerina Mitrokotsa</a>.
-For the necessary technical supervision, please refer to
+<a href="http://www.cs.vu.nl/~crispo/teaching/literature_study.html">
+Bruno Crispo</a>.
+
+Available topics:
+<ul>
+<li>Computational Photography (advisor: Thilo Kielmann)<br>
+The rapidly-developing field of computational photography could revolutionize the use of digital cameras by providing software for manipulating images in nearly unlimited ways. For example, one software program can merge multiple camera shots to replace a bad facial expression in a group photo. Another program can combine pictures taken with and without a flash to illuminate people's faces while still providing a good image of a night-time background, and another program can create crystal-clear details by shifting the focus of the image after the picture has been taken. Meanwhile, Stanford University researchers are developing Frankencamera, an open source digital camera that enables users to add and remove features as easily as adding and removing LEGO parts. "With hardware and software and algorithms, there's just no end to what we can do with cameras and computational photography," says Stanford professor Marc Levoy. "I think it's going to be very exciting." ACM's annual Special Interest Group on Graphics and Interactive Techniques (SIGGRAPH) conference has provided a big boost to the development of computational photography. At this year's conference, researchers at MIT's Computer Science and Artificial Intelligence Lab introduced a technique called motion-invariant photography, which can be used to remove the blur from pictures of moving objects. The method currently works well on horizontal blurs and the researchers are working on extending its capabilities to two dimensions. Another feature in development, digital refocusing, enables a photographer to refocus a picture after it is taken in case the wrong subject was the main focus of the picture.
+See also: <a href="http://www.msnbc.msn.com/id/27585300/">popular article</a>,
+and <a href="http://www-graphics.stanford.edu/~levoy/publications.html">research site</a>
+<li>
+For other topics, please refer to
 <a href="http://www.cs.vu.nl/~reeuwijk/">Kees van Reeuwijk</a>.
+
+</ul>
 </p>
 
 <hr>
