New Multmedia projects added. Poker project removed.

--- a/content/projects.html
+++ b/content/projects.html
@@ -280,13 +280,50 @@ of Reo.
 </p>
 
 
-<li><b>Poker player (challenging)</b></li>
+<li><b>High-Performance Multimedia Computing on GPUs</b></li>
 
 <p>
-Develop a computer poker player that approximates or exceeds state-of-the-art
-implementations. <b>Note:</b> this project requires some literature study,
-and may not even be feasible in the current form.
+The extraction of information (knowledge) from image and video data is a
+challenging and computationally demanding task. Given the inherently regular
+nature of many image processing algorithms, the use of GPUs (e.g. NVIDIA) is
+known to be very beneficial.
+
+In this project you will implement a small parallel image processing library
+for GPUs, using CUDA. The functionality is to be applied in one or more
+parallel image/video processing applications. The resulting system is to be
+evaluated by comparing the obtained results with an existing library in
+C++/MPI system (and possibly also with preliminary results obtained on the
+CELL/BE). 
 </p>
+
+<p>
+For more information, contact
+<a href="http://www.cs.vu.nl/~fjseins/">Dr. Frank J. Seinstra</a>.
+</p>
+
+
+
+<li><b>Intelligent Hardware Selection for Multimedia Applications (challenging)</b></li>
+
+<p>
+The extraction of information (knowledge) from image and video data is a
+challenging and computationally demanding task. Given the inherently regular
+nature of many of the commonly used image processing algorithms (e.g.
+filtering), the use of multicore processors and hardware accelerators, such
+as MPSoCs (e.g. CELL/BE) and GPUs (e.g. NVIDIA), is known to be beneficial.
+</p>
+
+<p>
+In this project you will design a system that can automatically select the
+'best' (e.g. fastest) hardware to run on for a given image/video processing
+application.
+</p>
+
+<p>
+For more information, contact
+<a href="http://www.cs.vu.nl/~fjseins/">Dr. Frank J. Seinstra</a>.
+</p>
+
 
 <li><b>Optimal code generation (challenging)</b></li>
 
