Added Ibis Visualization Toolkit project.

--- a/content/projects.html
+++ b/content/projects.html
@@ -97,6 +97,35 @@ communicating over the Bluetooth protocol, allowing efficient
 wireless communication.
 </p>
 
+
+<li><b>The Ibis Visualization Toolkit</b></li>
+
+<p>
+Ibis drastically simplifies the process of programming and deploying
+large-scale parallel and distributed applications. It does so by making
+transparent most of the underlying hardware and system complexities.
+</p>
+
+<p>
+Despite being useful, this high degree of transparency also has a drawback:
+when applications run slower than expected, or even crash, it is often
+difficult to find out the cause of the problem. Therefore it would be useful
+if Ibis application programmers and users would be presented with accurate
+information regarding the internal status of a running distributed application.
+</p>
+
+<p>
+In this project you will develop an Ibis visualization system, that provides
+Ibis programmers and users with insightful and up-to-date status information
+of running Ibis applications, and the resources they use. 
+</p>
+
+<p>
+For more information, contact
+<a href="http://www.cs.vu.nl/~fjseins/">Dr. Frank J. Seinstra</a>.
+</p>
+
+
 <li><b>The Multimedia PowerGrid</b></li>
 
 <p>
