new cloud computing projects

--- a/content/projects.html
+++ b/content/projects.html
@@ -227,6 +227,24 @@ would provide an important extension of the SAGA/JavaGAT scope.
 </p>
 <p>Please contact 
 <a href="http://www.cs.vu.nl/~kielmann/">Thilo Kielmann</a>.</p>
+
+<li><b>Amazon Cloud Adaptors</b></li>
+<p>Cloud computing is a new way of acquiring resources for applications. It is somewhat of a mixture of grids and traditional hosting services: Machines are "rented" on demand by a user, for a fixed price per hour. These machines can then be used for whatever the user wants (usually hosting websites)</p>
+
+<p>Amazon offers a cloud-computing infrastructure called <a href="http://aws.amazon.com/">Amazon Web Services</a>. Services include the Amazon elastic compute cloud(EC2) for acquiring machines, as well as the Amazon Simple Storage Service (S3) for storing files. We have done some initial experiments, showing this infrastructure can be used to run applications made with software in the Ibis project.</p>
+
+<p>The central research question of this project: is the amazon cloud useful
+as a platform for high performance parallel applications? Implement adaptors
+for the Amazon cloud services, specifically adaptors for both EC2 and S3. Also
+investigate the possibility of implementing adaptors to other services such as
+SimpleDB and Simple Queue Service (SQS). Using these adaptors, investigate the
+performance of the Amazon cloud, including network and processor speed, and application performance for a number of (existing) ibis applications.</p>
+
+<p>Please contact 
+<a href="http://www.cs.vu.nl/~kielmann/">Thilo Kielmann</a>.</p>
+
+
+
 </ul>
 
 <h3><a name="m-graphics">Graphics</a></h3>
