working on new site

--- a/content/index.html
+++ b/content/index.html
@@ -13,12 +13,9 @@ project members explaining this in detail.</p>
 
 <p>Download a demo video, showing a galaxy simulation written with Satin (one of the Ibis programming models) and deployed with the JavaGAT <a href="downloads/barnes-demo-xvid.avi">here</a>.</p>
 
-<p>
-<center>
-	<img src="images/ibis-factory.png" alt="ibis-factory" >
-</center>
+<p align="center">
+<img src="images/ibis-factory.png" alt="ibis-factory" >
 </p>
-
 
 <!--
 <p>Using Ibis, software can be developed which runs reliably and efficiently on a grid. Programs can, through Ibis, make use of high speed networking hardware while still remaining portable. It is possible to write Ibis programs using multiple programming models, including standard Java RMI, models which support group communication, a divide-and-conquer model, and message passing.</p>
