fixed create pages script to put bibtex stuff in "generated" dir instead of root started a layout dir

--- a/content/talks.html
+++ b/content/talks.html
@@ -1,40 +1,40 @@
 <h2>Talks</h2>
 
 <?php
-include ("generated_talks_other.html");
+include ("generated/talks_other.html");
 ?>
 
 <a name=javagat><h3>JavaGAT</h3></a>
 <?php
-include ("generated_talks_javagat.html");
+include ("generated/talks_javagat.html");
 ?>
 
 <a name=satin><h3>Satin</h3></a>
 <?php
-include ("generated_talks_satin.html");
+include ("generated/talks_satin.html");
 ?>
 
 <a name=mpj><h3>MPJ</h3></a>
 <?php
-include ("generated_talks_mpj.html");
+include ("generated/talks_mpj.html");
 ?>
 
 <a name=gmi><h3>GMI</h3></a>
 <?php
-include ("generated_talks_gmi.html");
+include ("generated/talks_gmi.html");
 ?>
 
 <a name=zorilla><h3>Zorilla</h3></a>
 <?php
-include ("generated_talks_zorilla.html");
+include ("generated/talks_zorilla.html");
 ?>
 
 <a name=ibis><h3>IPL: Ibis Communication Library</h3></a>
 <?php
-include ("generated_talks_ibis.html");
+include ("generated/talks_ibis.html");
 ?>
 
 <a name=smartsockets><h3>Smartsockets</h3><a>
 <?php
-include ("generated_talks_smartsockets.html");
+include ("generated/talks_smartsockets.html");
 ?>
