--- a/content/index.html
+++ b/content/index.html
@@ -1,3 +1,6 @@
+<!-- this image also holds the title of the ibis page -->
+<img src="images/balloons-text.png" alt="Banner">
+
 <h2>Welcome to the Ibis webpage.</h2>
 
 <p>This is the website of Ibis. Ibis is an <em>open source</em> Java grid software project of the <a href="http://www.cs.vu.nl/cs">Computer Systems group</a>, which is part of the <a href="http://www.cs.vu.nl">Computer Science department</a> of the <a href="http://www.few.vu.nl">Faculty of Sciences</a> at the <a href="http://www.vu.nl">Vrije Universiteit</a>, Amsterdam, The Netherlands.</p>
