--- a/generator/header.html
+++ b/generator/header.html
@@ -2,6 +2,7 @@
 
 <html>
     <head>
+	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
 
 	<link href="style.css" type="text/css" rel="StyleSheet"> 
 
