first version of website generator

--- a/generator/index-result.html
+++ b/generator/index-result.html
@@ -52,12 +52,10 @@
 		</td>
 	    </tr>
 
-	    <!-- BANNER & NEWS -->
 
+	    <!-- CONTENT AND NEWS -->
 	    <tr>
 		<td class="main">
-		    <img src="images/balloons-text.png" alt="Banner">
-		    <!-- CONTENT -->
 		    <?php include ("content/index.html"); ?> 
 		</td>
 
