--- a/generator/projects-result.html
+++ b/generator/projects-result.html
@@ -52,7 +52,7 @@
 		</td>
 	    </tr>
 
-	    <!-- MENU AND BANNER -->
+	    <!-- MENU -->
 
 	    <tr>
 		<td class="main" id="menu_cell" rowspan=2>
@@ -88,7 +88,6 @@
 		<!-- CONTENT -->
 
 		<td class="main">
-		    <img src="images/projects-banner.png" alt="Banner">
 		    <?php include ("content/projects.html"); ?> 
 		</td>
 	    </tr>
