--- a/content/index.html
+++ b/content/index.html
@@ -16,7 +16,7 @@ project members explaining this in detail.</p>
 
 <p>Download a demo video, showing a galaxy simulation written with Satin (one of the Ibis programming models) and deployed with the JavaGAT <a href="downloads/barnes-demo-xvid.avi">here</a>.</p>
 
-<p align="center">
+<p class=centered>
 <img src="images/ibis-factory.png" alt="ibis-factory" >
 </p>
 
