--- a/index.html
+++ b/index.html
@@ -55,27 +55,16 @@
 	    <!-- BANNER & NEWS -->
 
 	    <tr>
-		<td class="main">
+		<td class=main>
 		    <!-- CONTENT -->
 		    <?php include ("content/index.html"); ?> 
 		</td>
 
-		<td class="main" id="news_cell" rowspan=2>
-		    <div class="news">
-			<table class="news">
-			    <tr class="news"><th class="news">What's new?</th></tr>
-			    <!-- <?php include ("content/news-summary.html"); ?> -->
-			    <tr><td class="news">
-				    <a href="news.html#gmi2.1" class="news">June 2008: Ibis GMI 2.1 is available now!</a>
-			    </td></tr>
-			    <tr><td class="news">
-				    <a href="news.html#gmi2.1" class="news">June 2008: Ibis GMI 2.1 is available now!</a>
-			    </td></tr>
-			    <tr><td class="news">
-				    <a href="news.html#gmi2.1" class="news">June 2008: Ibis GMI 2.1 is available now!</a>
-			    </td></tr>
+		<td class=main>
+			<table class=news>
+			    <tr class=news><th class=news>What's new?</th></tr>
+			    <?php include ("content/news-summary.html"); ?> 
 			</table>
-		</div>
 		</td>
 	    </tr>
 
