--- a/projects.html
+++ b/projects.html
@@ -55,40 +55,35 @@
 	    <!-- MENU AND BANNER -->
 
 	    <tr>
-		<td class="main" id="menu_cell" rowspan=2>
-		    <div class="menu">
+		<td class="main">
 			<table class="menu">
 			    <tr>
 				<td class="menu">
-				    <a href="menu.html#gmi2.1" class="menu menu_active level1">Overview</a>
+				    <a href="menu.html#gmi2.1" class="menu menu_active level0">Overview</a>
 				</td>
 			    </tr>
 
 			    <tr>
 				<td class="menu">
-				    <a href="menu.html#gmi2.1" class="menu level1">Middleware</a>
+				    <a href="menu.html#gmi2.1" class="menu level0">Middleware</a>
 				</td>
 			    </tr>
 			    <tr>
 				<td class="menu">
-				    <a href="menu.html#gmi2.1" class="menu level2">JavaGAT</a>
+				    <a href="menu.html#gmi2.1" class="menu level1">JavaGAT</a>
 				</td>
 			    </tr>
 			    <tr>
 				<td class="menu">
-				    <a href="menu.html#gmi2.1" class="menu level2">Zorilla</a>
+				    <a href="menu.html#gmi2.1" class="menu level1">Zorilla</a>
 				</td>
 			    </tr>
 			</table>
-		    </div>
 		</td>
-	    </tr>
-	    <tr>
 
 		<!-- CONTENT -->
 
 		<td class="main">
-		    <img src="images/projects-banner.png" alt="Banner">
 		    <?php include ("content/projects.html"); ?> 
 		</td>
 	    </tr>
